xhci: Give USB2 ports time to enter U3 in bus suspend (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56746,6 +56746,7 @@
 	patches.suse/usb-chipidea-ci_hdrc_imx-Pass-DISABLE_DEVICE_STREAMI.patch
 	patches.suse/USB-dummy-hcd-Fix-uninitialized-array-use-in-init.patch
 	patches.suse/USB-add-RESET_RESUME-quirk-for-Snapscan-1212.patch
+	patches.suse/xhci-Give-USB2-ports-time-to-enter-U3-in-bus-suspend.patch
 	patches.suse/usb-ehci-omap-Fix-PM-disable-depth-umbalance-in-ehci.patch
 	patches.suse/usb-oxu210hp-hcd-Fix-memory-leak-in-oxu_create.patch
 	patches.suse/USB-UAS-introduce-a-quirk-to-set-no_write_same.patch
