i2c: pxa: fix i2c_pxa_scream_blue_murder() debug output (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55317,6 +55317,7 @@
 	patches.suse/kvm-x86-fix-apic-page-invalidation-race
 	patches.suse/x86_mce_mm-Unmap_the_entire_page_if_the_whole_page_is_affected_and_poisoned.patch
 	patches.suse/i2c-piix4-Detect-secondary-SMBus-controller-on-AMD-A.patch
+	patches.suse/i2c-pxa-fix-i2c_pxa_scream_blue_murder-debug-output.patch
 	patches.suse/scsi-ibmvscsi-Don-t-send-host-info-in-adapter-info-M.patch
 	patches.suse/ibmvnic-Flush-existing-work-items-before-device-remo.patch
 	patches.suse/ext4-fix-partial-cluster-initialization-when-splitti.patch
