--- a/series.conf
+++ b/series.conf
@@ -55075,6 +55075,7 @@
 	patches.suse/b43legacy-Fix-case-where-channel-status-is-corrupted.patch
 	patches.suse/mwifiex-avoid-Wstringop-overflow-warning.patch
 	patches.suse/carl9170-remove-P2P_GO-support.patch
+	patches.suse/ath9k_htc-Silence-undersized-packet-warnings.patch
 	patches.suse/Bluetooth-Handle-Inquiry-Cancel-error-after-Inquiry-.patch
 	patches.suse/e1000-Do-not-perform-reset-in-reset_task-if-we-are-a.patch
 	patches.suse/net-ena-add-support-for-the-rx-offset-feature.patch
