--- a/series.conf
+++ b/series.conf
@@ -56381,6 +56381,7 @@
 	patches.suse/iio-light-si1145-Fix-timestamp-alignment-and-prevent.patch
 	patches.suse/iio-adc-ti-adc0832-Fix-alignment-issue-with-timestam.patch
 	patches.suse/iio-adc-ti-adc12138-Fix-alignment-issue-with-timesta.patch
+	patches.suse/staging-comedi-check-validity-of-wMaxPacketSize-of-u.patch
 	patches.suse/usb-core-Solve-race-condition-in-anchor-cleanup-func.patch
 	patches.suse/usb-typec-tcpm-During-PR_SWAP-source-caps-should-be-.patch
 	patches.suse/usb-core-driver-fix-stray-tabs-in-error-messages.patch
