--- a/series.conf
+++ b/series.conf
@@ -55287,6 +55287,7 @@
 	patches.suse/power-supply-lp8788-Fix-an-error-handling-path-in-lp.patch
 	patches.suse/power-supply-smb347-charger-IRQSTAT_D-is-volatile.patch
 	patches.suse/power-supply-max17040-Correct-voltage-reading.patch
+	patches.suse/clk-samsung-exynos5433-Add-IGNORE_UNUSED-flag-to-scl.patch
 	patches.suse/clk-sunxi-Fix-incorrect-usage-of-round_down.patch
 	patches.suse/clk-bcm2835-Fix-return-type-of-bcm2835_register_gate.patch
 	patches.suse/clk-clk-flexgen-fix-clock-critical-handling.patch
