Bluetooth: add a mutex lock to avoid UAF in do_enale_set (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55739,6 +55739,7 @@
 	patches.suse/net-ena-support-new-LLQ-acceleration-mode.patch
 	patches.suse/btmrvl-Fix-firmware-filename-for-sd8997-chipset.patch
 	patches.suse/Bluetooth-Disconnect-if-E0-is-used-for-Level-4.patch
+	patches.suse/Bluetooth-add-a-mutex-lock-to-avoid-UAF-in-do_enale_.patch
 	patches.suse/Bluetooth-Fix-slab-out-of-bounds-read-in-hci_extende.patch
 	patches.suse/Bluetooth-Prevent-out-of-bounds-read-in-hci_inquiry_.patch
 	patches.suse/0003-Bluetooth-Prevent-out-of-bounds-read-in-hci_inquiry_.patch
