--- a/series.conf
+++ b/series.conf
@@ -55271,6 +55271,7 @@
 	patches.suse/pinctrl-freescale-imx-Fix-an-error-handling-path-in-.patch
 	patches.suse/net-ena-xdp-XDP_TX-fix-memory-leak.patch
 	patches.suse/net-ena-xdp-update-napi-budget-for-DROP-and-ABORTED.patch
+	patches.suse/geneve-change-from-tx_error-to-tx_dropped-on-missing.patch
 	patches.suse/yam-fix-possible-memory-leak-in-yam_init_driver.patch
 	patches.suse/drm-i915-Whitelist-context-local-timestamp-in-the-ge.patch
 	patches.suse/s390-qdio-consistently-restore-the-irq-handler
