gpio: gpio-grgpio: fix possible sleep-in-atomic-context bugs in grgpio_irq_map/unmap() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53598,6 +53598,7 @@
 	patches.suse/ALSA-usb-audio-add-quirks-for-Line6-Helix-devices-fw.patch
 	patches.suse/s390-pci-recover-handle-in-clp_set_pci_fn
 	patches.suse/s390-pci-fix-possible-deadlock-in-recover_store
+	patches.suse/gpio-gpio-grgpio-fix-possible-sleep-in-atomic-contex.patch
 	patches.suse/pinctrl-sh-pfc-r8a7778-Fix-duplicate-SDSELF_B-and-SD.patch
 	patches.suse/pinctrl-sh-pfc-sh7264-Fix-CAN-function-GPIOs.patch
 	patches.suse/pinctrl-sh-pfc-sh7269-Fix-CAN-function-GPIOs.patch
