i2c: algo: pca: Reapply i2c bus settings after reset (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56154,6 +56154,7 @@
 	patches.suse/drm-tve200-Stabilize-enable-disable.patch
 	patches.suse/mmc-sdhci-msm-Add-retries-when-all-tuning-phases-are.patch
 	patches.suse/regulator-push-allocation-in-set_consumer_device_sup.patch
+	patches.suse/i2c-algo-pca-Reapply-i2c-bus-settings-after-reset.patch
 	patches.suse/rbd-require-global-cap_sys_admin-for-mapping-and-unmapping.patch
 	patches.suse/btrfs-require-only-sector-size-alignment-for-parent-.patch
 	patches.suse/video-fbdev-fix-OOB-read-in-vga_8planes_imageblit.patch
