--- a/series.conf
+++ b/series.conf
@@ -55483,6 +55483,7 @@
 	patches.suse/bnxt_en-fix-NULL-dereference-in-case-SR-IOV-configur.patch
 	patches.suse/mlxsw-spectrum_router-Remove-inappropriate-usage-of-.patch
 	patches.suse/scsi-dh-Add-Fujitsu-device-to-devinfo-and-dh-lists.patch
+	patches.suse/Input-synaptics-enable-InterTouch-for-ThinkPad-X1E-1.patch
 	patches.suse/Input-i8042-add-Lenovo-XiaoXin-Air-12-to-i8042-nomux.patch
 	patches.suse/dmaengine-fsl-edma-Fix-NULL-pointer-exception-in-fsl.patch
 	patches.suse/Revert-thermal-mediatek-fix-register-index-error.patch
