--- a/series.conf
+++ b/series.conf
@@ -52900,6 +52900,7 @@
 	patches.suse/mfd-mfd-core-Protect-against-NULL-call-back-function.patch
 	patches.suse/gpio-mpc8xxx-Don-t-overwrite-default-irq_set_type-ca.patch
 	patches.suse/HID-core-check-whether-Usage-Page-item-is-after-Usag.patch
+	patches.suse/HID-Improve-Windows-Precision-Touchpad-detection.patch
 	patches.suse/platform-x86-hp-wmi-Fix-ACPI-errors-caused-by-too-sm.patch
 	patches.suse/platform-x86-hp-wmi-Fix-ACPI-errors-caused-by-passin.patch
 	patches.suse/cdrom-respect-device-capabilities-during-opening-act.patch
