iio: srf04: fix wrong limitation in distance measuring (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52388,6 +52388,7 @@
 	patches.suse/x86-resctrl-prevent-null-pointer-dereference-when-reading-mondata.patch
 	patches.suse/0001-thunderbolt-Fix-lockdep-circular-locking-depedency-w.patch
 	patches.suse/iio-imu-adis16480-make-sure-provided-frequency-is-po.patch
+	patches.suse/iio-srf04-fix-wrong-limitation-in-distance-measuring.patch
 	patches.suse/iio-adc-stm32-adc-fix-stopping-dma.patch
 	patches.suse/reset-fix-of_reset_simple_xlate-kerneldoc-comment.patch
 	patches.suse/reset-fix-reset_control_get_exclusive-kerneldoc-comm.patch
