--- a/series.conf
+++ b/series.conf
@@ -53197,6 +53197,7 @@
 	patches.suse/0001-usbip-Fix-error-path-of-vhci_recv_ret_submit.patch
 	patches.suse/usb-xhci-Fix-build-warning-seen-with-CONFIG_PM-n.patch
 	patches.suse/tty-serial-msm_serial-Fix-lockup-for-sysrq-and-oops.patch
+	patches.suse/staging-comedi-gsc_hpdi-check-dma_alloc_coherent-ret.patch
 	patches.suse/Revert-mmc-sdhci-Fix-incorrect-switch-to-HS-mode.patch
 	patches.suse/mmc-mediatek-fix-CMD_TA-to-2-for-MT8173-HS200-HS400-.patch
 	patches.suse/mmc-sdhci-of-esdhc-Revert-mmc-sdhci-of-esdhc-add-err.patch
