--- a/series.conf
+++ b/series.conf
@@ -52616,6 +52616,7 @@
 	patches.suse/mwifiex-pcie-Fix-memory-leak-in-mwifiex_pcie_alloc_c.patch
 	patches.suse/mwifiex-pcie-Fix-memory-leak-in-mwifiex_pcie_init_ev.patch
 	patches.suse/rtlwifi-Remove-unnecessary-NULL-check-in-rtl_regd_in.patch
+	patches.suse/Bluetooth-Fix-advertising-duplicated-flags.patch
 	patches.suse/0001-Bluetooth-Fix-invalid-free-in-bcsp_close.patch
 	patches.suse/ibmveth-Detect-unsupported-packets-before-sending-to.patch
 	patches.suse/tun-fix-data-race-in-gro_normal_list.patch
