--- a/series.conf
+++ b/series.conf
@@ -52777,6 +52777,7 @@
 	patches.suse/qlge-Refill-rx-buffers-up-to-multiple-of-16.patch
 	patches.suse/qlge-Refill-empty-buffer-queues-from-wq.patch
 	patches.suse/iio-light-bh1750-Resolve-compiler-warning-and-make-c.patch
+	patches.suse/iio-adc-max1027-Reset-the-device-at-probe-time.patch
 	patches.suse/staging-rtl8192e-fix-potential-use-after-free.patch
 	patches.suse/staging-rtl8723bs-Add-024c-0525-to-the-list-of-SDIO-.patch
 	patches.suse/staging-rtl8723bs-Drop-ACPI-device-ids.patch
