clk: qcom: Allow constant ratio freq tables for rcg (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52892,6 +52892,7 @@
 	patches.suse/compat_ioctl-handle-SIOCOUTQNSD.patch
 	patches.suse/clk-samsung-exynos5420-Preserve-CPU-clocks-configura.patch
 	patches.suse/clk-ti-adpll-allocate-room-for-terminating-null.patch
+	patches.suse/clk-qcom-Allow-constant-ratio-freq-tables-for-rcg.patch
 	patches.suse/clk-pxa-fix-one-of-the-pxa-RTC-clocks.patch
 	patches.suse/clk-Add-clk_hw_unregister_composite-helper-function-.patch
 	patches.suse/mfd-intel-lpss-Add-default-I2C-device-properties-for.patch
