iio: humidity: hdc100x: fix IIO_HUMIDITYRELATIVE channel reporting (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53144,6 +53144,7 @@
 	patches.suse/xhci-Increase-STS_HALT-timeout-in-xhci_suspend.patch
 	patches.suse/xhci-handle-some-XHCI_TRUST_TX_LENGTH-quirks-cases-a.patch
 	patches.suse/xhci-make-sure-interrupts-are-restored-to-correct-st.patch
+	patches.suse/iio-humidity-hdc100x-fix-IIO_HUMIDITYRELATIVE-channe.patch
 	patches.suse/iio-adc-max9611-Fix-too-short-conversion-time-delay.patch
 	patches.suse/staging-rtl8188eu-fix-interface-sanity-check.patch
 	patches.suse/0011-lib-raid6-fix-awk-build-warnings.patch
