clk: ti: dra7-atl-clock: Remove ti_clk_add_alias call (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52325,6 +52325,7 @@
 	patches.suse/0006-dump_stack-avoid-the-livelock-of-the-dump_lock.patch
 	patches.suse/HID-wacom-generic-Treat-serial-number-and-related-fi.patch
 	patches.suse/clk-at91-avoid-sleeping-early.patch
+	patches.suse/clk-ti-dra7-atl-clock-Remove-ti_clk_add_alias-call.patch
 	patches.suse/clk-sunxi-ng-a80-fix-the-zero-ing-of-bits-16-and-18.patch
 	patches.suse/clk-samsung-exynos5420-Preserve-PLL-configuration-du.patch
 	patches.suse/0005-drm-radeon-fix-si_enable_smc_cac-failed-issue.patch
