iio: fix center temperature of bmc150-accel-core (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52139,6 +52139,7 @@
 	patches.suse/staging-bcm2835-audio-Fix-draining-behavior-regressi.patch
 	patches.suse/staging-rtl8188eu-fix-null-dereference-when-kzalloc-.patch
 	patches.suse/staging-vt6655-Fix-memory-leak-in-vt6655_probe.patch
+	patches.suse/iio-fix-center-temperature-of-bmc150-accel-core.patch
 	patches.suse/iio-imu-adis16400-release-allocated-memory-on-failur.patch
 	patches.suse/iio-adc-ad799x-fix-probe-error-handling.patch
 	patches.suse/iio-light-opt3001-fix-mutex-unlock-race.patch
