Input: i8042 - allow insmod to succeed on devices without an i8042 controller (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56693,6 +56693,7 @@
 	patches.suse/usb-cdc-acm-Add-DISABLE_ECHO-for-Renesas-USB-Downloa.patch
 	patches.suse/s390-cpum_sf-c-fix-file-permission-for-cpum_sfb_size
 	patches.suse/Input-adxl34x-clean-up-a-data-type-in-adxl34x_probe.patch
+	patches.suse/Input-i8042-allow-insmod-to-succeed-on-devices-witho.patch
 	patches.suse/Input-sunkbd-avoid-use-after-free-in-teardown-paths.patch
 	patches.suse/regulator-fix-memory-leak-with-repeated-set_machine_.patch
 	patches.suse/regulator-avoid-resolve_supply-infinite-recursion.patch
