--- a/series.conf
+++ b/series.conf
@@ -52072,6 +52072,7 @@
 	patches.suse/scsi-qla2xxx-Fix-Nport-ID-display-value.patch
 	patches.suse/0001-kernel-sysctl.c-do-not-override-max_threads-provided.patch
 	patches.suse/mm-page_alloc.c-fix-a-crash-in-free_pages_prepare.patch
+	patches.suse/gpio-max77620-Use-correct-unit-for-debounce-times.patch
 	patches.suse/arm64-errata-Update-stale-comment.patch
 	patches.suse/arm64-sve-Fix-wrong-free-for-task-thread.sve_state.patch
 	patches.suse/RDMA-hfi1-Prevent-memory-leak-in-sdma_init.patch
