--- a/series.conf
+++ b/series.conf
@@ -52922,6 +52922,7 @@
 	patches.suse/mm-rmap.c-don-t-reuse-anon_vma-if-we-just-want-a-copy.patch
 	patches.suse/mm-shmem.c-cast-the-type-of-unmap_start-to-u64.patch
 	patches.suse/iommu-mediatek-correct-the-flush_iotlb_all-callback
+	patches.suse/firmware-qcom-scm-Ensure-a0-status-code-is-treated-a.patch
 	patches.suse/scsi-lpfc-Fix-pt2pt-discovery-on-SLI3-HBAs.patch
 	patches.suse/scsi-lpfc-Fix-premature-re-enabling-of-interrupts-in.patch
 	patches.suse/scsi-lpfc-Fix-miss-of-register-read-failure-check.patch
