--- a/series.conf
+++ b/series.conf
@@ -55789,6 +55789,7 @@
 	patches.suse/ALSA-pci-delete-repeated-words-in-comments.patch
 	patches.suse/iio-improve-IIO_CONCENTRATION-channel-type-descripti.patch
 	patches.suse/staging-rtl8192u-fix-a-dubious-looking-mask-before-a.patch
+	patches.suse/iio-dac-ad5592r-fix-unbalanced-mutex-unlocks-in-ad55.patch
 	patches.suse/Staging-rtl8188eu-rtw_mlme-Fix-uninitialized-variabl.patch
 	patches.suse/vgacon-fix-out-of-bounds-write-to-the-scrollback-buf.patch
 	patches.suse/RDMA-rxe-Remove-unused-rxe_mem_map_pages.patch
