clk: ti: composite: fix memory leak (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55289,6 +55289,7 @@
 	patches.suse/power-supply-max17040-Correct-voltage-reading.patch
 	patches.suse/clk-samsung-exynos5433-Add-IGNORE_UNUSED-flag-to-scl.patch
 	patches.suse/clk-sunxi-Fix-incorrect-usage-of-round_down.patch
+	patches.suse/clk-ti-composite-fix-memory-leak.patch
 	patches.suse/clk-bcm2835-Fix-return-type-of-bcm2835_register_gate.patch
 	patches.suse/clk-clk-flexgen-fix-clock-critical-handling.patch
 	patches.suse/mtd-spi-nor-fix-kernel-doc-for-spi_nor-reg_proto.patch
