Input: atmel_mxt_ts - disable IRQ across suspend (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52909,6 +52909,7 @@
 	patches.suse/libnvdimm-pfn_dev-Don-t-clear-device-memmap-area-dur.patch
 	patches.suse/libnvdimm-namespace-Differentiate-between-probe-mapp.patch
 	patches.suse/libnvdimm-export-the-target_node-attribute-for-regions-and-namespaces.patch
+	patches.suse/Input-atmel_mxt_ts-disable-IRQ-across-suspend.patch
 	patches.suse/Input-synaptics-rmi4-simplify-data-read-in-rmi_f54_w.patch
 	patches.suse/Input-synaptics-switch-another-X1-Carbon-6-to-RMI-SM.patch
 	patches.suse/net-tls-take-into-account-that-bpf_exec_tx_verdict-m.patch
