clk: qcom: msm8916: Fix the address location of pll->config_reg (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55292,6 +55292,7 @@
 	patches.suse/clk-ti-composite-fix-memory-leak.patch
 	patches.suse/clk-bcm2835-Fix-return-type-of-bcm2835_register_gate.patch
 	patches.suse/clk-clk-flexgen-fix-clock-critical-handling.patch
+	patches.suse/clk-qcom-msm8916-Fix-the-address-location-of-pll-con.patch
 	patches.suse/mtd-spi-nor-fix-kernel-doc-for-spi_nor-reg_proto.patch
 	patches.suse/mtd-spi-nor-fix-kernel-doc-for-spi_nor-info.patch
 	patches.suse/crypto-virtio-Fix-src-dst-scatterlist-calculation-in.patch
