--- a/series.conf
+++ b/series.conf
@@ -55460,6 +55460,7 @@
 	patches.suse/0001-drm-mediatek-Check-plane-visibility-in-atomic_update.patch
 	patches.suse/0001-drm-radeon-fix-double-free.patch
 	patches.suse/s390-mm-fix-huge-pte-soft-dirty-copying
+	patches.suse/gpio-arizona-handle-pm_runtime_get_sync-failure-case.patch
 	patches.suse/IB-hfi1-Do-not-destroy-hfi1_wq-when-the-device-is-sh.patch
 	patches.suse/IB-hfi1-Do-not-destroy-link_wq-when-the-device-is-sh.patch
 	patches.suse/llc-make-sure-applications-use-ARPHRD_ETHER.patch
