--- a/series.conf
+++ b/series.conf
@@ -55117,6 +55117,7 @@
 	patches.suse/media-platform-fcp-Set-appropriate-DMA-parameters.patch
 	patches.suse/media-si2157-Better-check-for-running-tuner-in-init.patch
 	patches.suse/media-cec-silence-shift-wrapping-warning-in-__cec_s_.patch
+	patches.suse/backlight-lp855x-Ensure-regulators-are-disabled-on-p.patch
 	patches.suse/ALSA-usb-audio-Improve-frames-size-computation.patch
 	patches.suse/ALSA-usb-audio-Fix-racy-list-management-in-output-qu.patch
 	patches.suse/ALSA-hda-realtek-Introduce-polarity-for-micmute-LED-.patch
