--- a/series.conf
+++ b/series.conf
@@ -55316,6 +55316,7 @@
 	patches.suse/amdgpu-a-null-mm-does-not-mean-a-thread-is-a-kthread
 	patches.suse/kvm-x86-fix-apic-page-invalidation-race
 	patches.suse/x86_mce_mm-Unmap_the_entire_page_if_the_whole_page_is_affected_and_poisoned.patch
+	patches.suse/i2c-piix4-Detect-secondary-SMBus-controller-on-AMD-A.patch
 	patches.suse/scsi-ibmvscsi-Don-t-send-host-info-in-adapter-info-M.patch
 	patches.suse/ibmvnic-Flush-existing-work-items-before-device-remo.patch
 	patches.suse/ext4-fix-partial-cluster-initialization-when-splitti.patch
