--- a/series.conf
+++ b/series.conf
@@ -53541,6 +53541,7 @@
 	patches.suse/NFC-pn544-Adjust-indentation-in-pn544_hci_check_pres.patch
 	patches.suse/brcmfmac-Fix-memory-leak-in-brcmf_p2p_create_p2pdev.patch
 	patches.suse/b43legacy-Fix-Wcast-function-type.patch
+	patches.suse/ipw2x00-Fix-Wcast-function-type.patch
 	patches.suse/iwlegacy-Fix-Wcast-function-type.patch
 	patches.suse/rtlwifi-rtl_pci-Fix-Wcast-function-type.patch
 	patches.suse/bcma-remove-set-but-not-used-variable-sizel.patch
