clk: tegra: Fix Tegra PMC clock out parents (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54563,6 +54563,7 @@
 	patches.suse/ring-buffer-make-resize-disable-per-cpu-buffer-instead-of-total-buffer.patch
 	patches.suse/ftrace-kprobe-show-the-maxactive-number-on-kprobe_events.patch
 	patches.suse/clk-at91-usb-continue-if-clk_hw_round_rate-return-ze.patch
+	patches.suse/clk-tegra-Fix-Tegra-PMC-clock-out-parents.patch
 	patches.suse/ext4-fix-a-data-race-at-inode-i_blocks.patch
 	patches.suse/ext4-Check-for-non-zero-journal-inum-in-ext4_calculate_overhead.patches
 	patches.suse/ext4-Avoid-ENOSPC-when-avoiding-to-reuse-recently-de.patch
