--- a/series.conf
+++ b/series.conf
@@ -54562,6 +54562,7 @@
 	patches.suse/svcrdma-Fix-leak-of-transport-addresses.patch
 	patches.suse/ring-buffer-make-resize-disable-per-cpu-buffer-instead-of-total-buffer.patch
 	patches.suse/ftrace-kprobe-show-the-maxactive-number-on-kprobe_events.patch
+	patches.suse/clk-at91-usb-continue-if-clk_hw_round_rate-return-ze.patch
 	patches.suse/ext4-fix-a-data-race-at-inode-i_blocks.patch
 	patches.suse/ext4-Check-for-non-zero-journal-inum-in-ext4_calculate_overhead.patches
 	patches.suse/ext4-Avoid-ENOSPC-when-avoiding-to-reuse-recently-de.patch
