--- a/series.conf
+++ b/series.conf
@@ -56731,6 +56731,7 @@
 	patches.suse/x86-microcode-intel-check-patch-signature-before-saving-microcode-for-early-loading.patch
 	patches.suse/efivarfs-fix-memory-leak-in-efivarfs_create.patch
 	patches.suse/efi-x86-free-efi_pgd-with-free_pages.patch
+	patches.suse/HID-cypress-Support-Varmilo-Keyboards-media-hotkeys.patch
 	patches.suse/msft-hv-2172-video-hyperv_fb-Fix-the-cache-type-when-mapping-the-.patch
 	patches.suse/platform-x86-acer-wmi-add-automatic-keyboard-backgro.patch
 	patches.suse/platform-x86-toshiba_acpi-Fix-the-wrong-variable-ass.patch
