gpiolib: fix up emulated open drain outputs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53263,6 +53263,7 @@
 	patches.suse/ext4-validate-the-debug_want_extra_isize-mount-optio.patch
 	patches.suse/gpio-mpc8xxx-Add-platform-device-to-gpiochip-parent.patch
 	patches.suse/gpio-Fix-error-message-on-out-of-range-GPIO-in-looku.patch
+	patches.suse/gpiolib-fix-up-emulated-open-drain-outputs.patch
 	patches.suse/0011-compat_ioctl-block-handle-BLKREPORTZONE-BLKRESETZONE.patch
 	patches.suse/0012-compat_ioctl-block-handle-Persistent-Reservations.patch
 	patches.suse/scsi-mpt3sas-Fix-double-free-in-attach-error-handlin.patch
