iio: bmp280: fix compensation of humidity (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55258,6 +55258,7 @@
 	patches.suse/iio-pressure-bmp280-Tolerate-IRQ-before-registering.patch
 	patches.suse/staging-r8188eu-avoid-skb_clone-for-amsdu-to-msdu-co.patch
 	patches.suse/staging-sm750fb-add-missing-case-while-setting-FB_VI.patch
+	patches.suse/iio-bmp280-fix-compensation-of-humidity.patch
 	patches.suse/staging-rtl8712-Fix-IEEE80211_ADDBA_PARAM_BUF_SIZE_M.patch
 	patches.suse/drivers-char-tlclk.c-Avoid-data-race-between-init-an.patch
 	patches.suse/fpga-dfl-afu-Corrected-error-handling-levels.patch
