clocksource/drivers/asm9260: Add a check for of_clk_get (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53026,6 +53026,7 @@
 	patches.suse/scsi-lpfc-use-hdwq-assigned-cpu-for-allocation.patch
 	patches.suse/scsi-bnx2i-fix-potential-use-after-free
 	patches.suse/xfs-Sanity-check-flags-of-Q_XQUOTARM-call.patch
+	patches.suse/clocksource-drivers-asm9260-Add-a-check-for-of_clk_g.patch
 	patches.suse/0009-hrtimer-Annotate-lockless-access-to-timer-state.patch
 	patches.suse/apparmor-fix-unsigned-len-comparison-with-less-than-zero.patch
 	patches.suse/rtc-msm6242-Fix-reading-of-10-hour-digit.patch
