--- a/series.conf
+++ b/series.conf
@@ -52235,6 +52235,7 @@
 	patches.suse/cifs-Fix-cifsInodeInfo-lock_sem-deadlock-when-reconnect-occurs.patch
 	patches.suse/HID-fix-error-message-in-hid_open_report.patch
 	patches.suse/0001-HID-Fix-assumption-that-devices-have-inputs.patch
+	patches.suse/HID-intel-ish-hid-fix-wrong-error-handling-in-ishtp_.patch
 	patches.suse/HID-logitech-hidpp-do-all-FF-cleanup-in-hidpp_ff_des.patch
 	patches.suse/fuse-flush-dirty-data-metadata-before-non-truncate-setattr.patch
 	patches.suse/fuse-truncate-pending-writes-on-o_trunc.patch
