--- a/series.conf
+++ b/series.conf
@@ -56093,6 +56093,7 @@
 	patches.suse/sdhci-tegra-Remove-SDHCI_QUIRK_DATA_TIMEOUT_USES_SDC.patch
 	patches.suse/btrfs-tree-checker-fix-the-error-message-for-transid.patch
 	patches.suse/fix-regression-in-epoll-Keep-a-reference-on-files-added-to-the-check-list.patch
+	patches.suse/HID-core-Correctly-handle-ReportSize-being-zero.patch
 	patches.suse/HID-core-Sanitize-event-code-and-type-when-mapping-i.patch
 	patches.suse/net-hns-Fix-memleak-in-hns_nic_dev_probe.patch
 	patches.suse/net-systemport-Fix-memleak-in-bcm_sysport_probe.patch
