--- a/series.conf
+++ b/series.conf
@@ -53261,6 +53261,7 @@
 	patches.suse/KVM-arm64-Ensure-params-is-initialised-when-looking-.patch
 	patches.suse/ext4-check-for-directory-entries-too-close-to-block-.patch
 	patches.suse/ext4-validate-the-debug_want_extra_isize-mount-optio.patch
+	patches.suse/gpio-mpc8xxx-Add-platform-device-to-gpiochip-parent.patch
 	patches.suse/gpio-Fix-error-message-on-out-of-range-GPIO-in-looku.patch
 	patches.suse/0011-compat_ioctl-block-handle-BLKREPORTZONE-BLKRESETZONE.patch
 	patches.suse/0012-compat_ioctl-block-handle-Persistent-Reservations.patch
