--- a/series.conf
+++ b/series.conf
@@ -52465,6 +52465,7 @@
 	patches.suse/i2c-acpi-force-bus-speed-to-400khz-if-a-silead-touchscreen-is-present.patch
 	patches.suse/iommu-vt-d-fix-qi_dev_iotlb_pfsid-and-qi_dev_eiotlb_pfsid-macros
 	patches.suse/gpiolib-acpi-Add-Terra-Pad-1061-to-the-run_edge_even.patch
+	patches.suse/gpio-max77620-Fixup-debounce-delays.patch
 	patches.suse/0001-drm-amd-powerplay-issue-no-PPSMC_MSG_GetCurrPkgPwr-o.patch
 	patches.suse/0002-drm-i915-pmu-Frequency-is-reported-as-accumulated-cy.patch
 	patches.suse/mm-ksm-c-don-t-warn-if-page-is-still-mapped-in-remove_stable_node.patch
