--- a/series.conf
+++ b/series.conf
@@ -53322,6 +53322,7 @@
 	patches.suse/HID-hid-input-clear-unmapped-usages.patch
 	patches.suse/HID-hiddev-fix-mess-in-hiddev_open.patch
 	patches.suse/0001-Input-add-safety-guards-to-input_set_keycode.patch
+	patches.suse/gpio-max77620-Add-missing-dependency-on-GPIOLIB_IRQC.patch
 	patches.suse/RDMA-bnxt_re-Avoid-freeing-MR-resources-if-dereg-fai.patch
 	patches.suse/RDMA-bnxt_re-Fix-Send-Work-Entry-state-check-while-p.patch
 	patches.suse/IB-hfi1-Don-t-cancel-unused-work-item.patch
