--- a/series.conf
+++ b/series.conf
@@ -54189,6 +54189,7 @@
 	patches.suse/memcg-fix-null-pointer-dereference-in-_mem_cgroup_usage_unregister_event.patch
 	patches.suse/x86-mm-split-vmalloc_sync_all.patch
 	patches.suse/btrfs-fix-log-context-list-corruption-after-rename-w.patch
+	patches.suse/gpiolib-acpi-Correct-comment-for-HP-x2-10-honor_wake.patch
 	patches.suse/net_sched-keep-alloc_hash-updated-after-hash-allocat.patch
 	patches.suse/hsr-use-rcu_read_lock-in-hsr_get_node_-list-status.patch
 	patches.suse/hsr-add-restart-routine-into-hsr_get_node_list.patch
