hwmon: (jc42) Fix name to have no illegal characters (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54697,6 +54697,7 @@
 	patches.suse/ALSA-hda-call-runtime_allow-for-all-hda-controllers.patch
 	patches.suse/watchdog-sp805-fix-restart-handler.patch
 	patches.suse/0008-drm-amd-powerplay-force-the-trim-of-the-mclk-dpm_lev.patch
+	patches.suse/hwmon-jc42-Fix-name-to-have-no-illegal-characters.patch
 	patches.suse/scsi-qla2xxx-Fix-regression-warnings.patch
 	patches.suse/scsi-sg-add-sg_remove_request-in-sg_common_write
 	patches.suse/cifs-dump-the-session-id-and-keys-also-for-SMB2-sessions.patch
