--- a/series.conf
+++ b/series.conf
@@ -56732,6 +56732,7 @@
 	patches.suse/efivarfs-fix-memory-leak-in-efivarfs_create.patch
 	patches.suse/efi-x86-free-efi_pgd-with-free_pages.patch
 	patches.suse/HID-cypress-Support-Varmilo-Keyboards-media-hotkeys.patch
+	patches.suse/HID-hid-sensor-hub-Fix-issue-with-devices-with-no-re.patch
 	patches.suse/msft-hv-2172-video-hyperv_fb-Fix-the-cache-type-when-mapping-the-.patch
 	patches.suse/platform-x86-acer-wmi-add-automatic-keyboard-backgro.patch
 	patches.suse/platform-x86-toshiba_acpi-Fix-the-wrong-variable-ass.patch
