--- a/series.conf
+++ b/series.conf
@@ -55260,6 +55260,7 @@
 	patches.suse/staging-sm750fb-add-missing-case-while-setting-FB_VI.patch
 	patches.suse/iio-bmp280-fix-compensation-of-humidity.patch
 	patches.suse/staging-rtl8712-Fix-IEEE80211_ADDBA_PARAM_BUF_SIZE_M.patch
+	patches.suse/drivers-base-Fix-NULL-pointer-exception-in-__platfor.patch
 	patches.suse/drivers-char-tlclk.c-Avoid-data-race-between-init-an.patch
 	patches.suse/fpga-dfl-afu-Corrected-error-handling-levels.patch
 	patches.suse/dev-mem-Revoke-mappings-when-a-driver-claims-the-reg.patch
