--- a/series.conf
+++ b/series.conf
@@ -53324,6 +53324,7 @@
 	patches.suse/0001-Input-add-safety-guards-to-input_set_keycode.patch
 	patches.suse/gpio-max77620-Add-missing-dependency-on-GPIOLIB_IRQC.patch
 	patches.suse/gpiolib-acpi-Turn-dmi_system_id-table-into-a-generic.patch
+	patches.suse/gpiolib-acpi-Add-honor_wakeup-module-option-quirk-me.patch
 	patches.suse/RDMA-bnxt_re-Avoid-freeing-MR-resources-if-dereg-fai.patch
 	patches.suse/RDMA-bnxt_re-Fix-Send-Work-Entry-state-check-while-p.patch
 	patches.suse/IB-hfi1-Don-t-cancel-unused-work-item.patch
