--- a/series.conf
+++ b/series.conf
@@ -52619,6 +52619,7 @@
 	patches.suse/ar5523-check-NULL-before-memcpy-in-ar5523_cmd.patch
 	patches.suse/mwifiex-pcie-Fix-memory-leak-in-mwifiex_pcie_alloc_c.patch
 	patches.suse/mwifiex-pcie-Fix-memory-leak-in-mwifiex_pcie_init_ev.patch
+	patches.suse/rtl8xxxu-fix-RTL8723BU-connection-failure-issue-afte.patch
 	patches.suse/rtlwifi-Remove-unnecessary-NULL-check-in-rtl_regd_in.patch
 	patches.suse/Bluetooth-Fix-advertising-duplicated-flags.patch
 	patches.suse/0001-Bluetooth-Fix-invalid-free-in-bcsp_close.patch
