--- a/series.conf
+++ b/series.conf
@@ -53372,6 +53372,7 @@
 	patches.suse/ALSA-hda-realtek-Set-EAPD-control-to-default-for-ALC.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-the-bass-speaker-on-L.patch
 	patches.suse/nvme-Translate-more-status-codes-to-blk_status_t.patch
+	patches.suse/tty-always-relink-the-port.patch
 	patches.suse/staging-comedi-adv_pci1710-fix-AI-channels-16-31-for.patch
 	patches.suse/chardev-Avoid-potential-use-after-free-in-chrdev_ope.patch
 	patches.suse/0001-USB-core-fix-check-for-duplicate-endpoints.patch
