--- a/series.conf
+++ b/series.conf
@@ -51482,6 +51482,7 @@
 	patches.suse/iio-dac-ad5380-fix-incorrect-assignment-to-val.patch
 	patches.suse/mic-avoid-statically-declaring-a-struct-device.patch
 	patches.suse/phy-renesas-rcar-gen3-usb2-Disable-clearing-VBUS-in-.patch
+	patches.suse/thunderbolt-Use-32-bit-writes-when-writing-ring-prod.patch
 	patches.suse/dev-mem-Bail-out-upon-SIGKILL.patch
 	patches.suse/firmware-google-check-if-size-is-valid-when-decoding.patch
 	patches.suse/crypto-ccp-Reduce-maximum-stack-usage.patch
