--- a/series.conf
+++ b/series.conf
@@ -52726,6 +52726,7 @@
 	patches.suse/media-bdisp-fix-memleak-on-release.patch
 	patches.suse/media-radio-wl1273-fix-interrupt-masking-on-release.patch
 	patches.suse/media-exynos4-is-Fix-recursive-locking-in-isp_video_.patch
+	patches.suse/media-v4l2-core-fix-touch-support-in-v4l_g_fmt.patch
 	patches.suse/media-vivid-Fix-wrong-locking-that-causes-race-condi.patch
 	patches.suse/0001-media-exynos4-is-fix-wrong-mdev-and-v4l2-dev-order-i.patch
 	patches.suse/0001-b2c2-flexcop-usb-add-sanity-checking.patch
