--- a/series.conf
+++ b/series.conf
@@ -52210,6 +52210,7 @@
 	patches.suse/btrfs-fix-qgroup-double-free-after-failure-to-reserve-metadata-for-delalloc.patch
 	patches.suse/Btrfs-check-for-the-full-sync-flag-while-holding-the.patch
 	patches.suse/edac-ghes-fix-use-after-free-in-ghes_edac-remove-path.patch
+	patches.suse/regulator-ti-abb-Fix-timeout-in-ti_abb_wait_txdone-t.patch
 	patches.suse/ALSA-hda-realtek-Add-support-for-ALC711.patch
 	patches.suse/ASoC-wm_adsp-Don-t-generate-kcontrols-without-READ-f.patch
 	patches.suse/ASoc-rockchip-i2s-Fix-RPM-imbalance.patch
