staging: rtl8188eu: fix possible null dereference (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52790,6 +52790,7 @@
 	patches.suse/parport-load-lowlevel-driver-if-ports-not-found.patch
 	patches.suse/intel_th-Fix-a-double-put_device-in-error-path.patch
 	patches.suse/staging-rtl8192u-fix-multiple-memory-leaks-on-error-.patch
+	patches.suse/staging-rtl8188eu-fix-possible-null-dereference.patch
 	patches.suse/qlge-Fix-irq-masking-in-INTx-mode.patch
 	patches.suse/qlge-Remove-irq_cnt.patch
 	patches.suse/qlge-Remove-page_chunk.last_flag.patch
