spi: Add call to spi_slave_abort() function when spidev driver is released (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52650,6 +52650,7 @@
 	patches.suse/regulator-max8907-Fix-the-usage-of-uninitialized-var.patch
 	patches.suse/regulator-ab8500-Remove-AB8505-USB-regulator.patch
 	patches.suse/regulator-ab8500-Remove-SYSCLKREQ-from-enum-ab8505_r.patch
+	patches.suse/spi-Add-call-to-spi_slave_abort-function-when-spidev.patch
 	patches.suse/spi-atmel-fix-handling-of-cs_change-set-on-non-last-.patch
 	patches.suse/spi-atmel-Fix-CS-high-support.patch
 	patches.suse/ipmi-dont-allow-device-module-unload-when-in-use.patch
