media: cec-funcs.h: add status_req checks (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52708,6 +52708,7 @@
 	patches.suse/media-i2c-ov2659-fix-s_stream-return-value.patch
 	patches.suse/media-i2c-ov2659-Fix-missing-720p-register-config.patch
 	patches.suse/media-rc-prevent-memory-leak-in-cx23888_ir_probe.patch
+	patches.suse/media-cec-funcs.h-add-status_req-checks.patch
 	patches.suse/media-usbvision-Fix-races-among-open-close-and-disco.patch
 	patches.suse/media-ti-vpe-vpe-Fix-Motion-Vector-vpdma-stride.patch
 	patches.suse/media-cxusb-detect-cxusb_ctrl_msg-error-in-query.patch
