mei: bus: don't clean driver pointer (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55560,6 +55560,7 @@
 	patches.suse/iio-humidity-hdc100x-Fix-alignment-and-data-leak-iss.patch
 	patches.suse/iio-pressure-ms5611-Fix-buffer-element-alignment.patch
 	patches.suse/staging-comedi-verify-array-index-is-correct-before-.patch
+	patches.suse/mei-bus-don-t-clean-driver-pointer.patch
 	patches.suse/revert-zram-convert-remaining-class_attr-to-class_attr_ro
 	patches.suse/phy-sun4i-usb-fix-dereference-of-pointer-phy0-before.patch
 	patches.suse/intel_th-Fix-a-NULL-dereference-when-hub-driver-is-n.patch
