--- a/series.conf
+++ b/series.conf
@@ -52787,6 +52787,7 @@
 	patches.suse/mei-fix-modalias-documentation.patch
 	patches.suse/mei-bus-prefix-device-names-on-bus-with-the-bus-name.patch
 	patches.suse/ppdev-fix-PPGETTIME-PPSETTIME-ioctls.patch
+	patches.suse/parport-load-lowlevel-driver-if-ports-not-found.patch
 	patches.suse/intel_th-Fix-a-double-put_device-in-error-path.patch
 	patches.suse/qlge-Fix-irq-masking-in-INTx-mode.patch
 	patches.suse/qlge-Remove-irq_cnt.patch
