PM: hibernate: remove the bogus call to get_gendisk() in software_resume() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56388,6 +56388,7 @@
 	patches.suse/xen-gntdev.c-Mark-pages-as-dirty.patch
 	patches.suse/x86-xen-disable-Firmware-First-mode-for-correctable-.patch
 	patches.suse/platform-x86-mlx-platform-Remove-PSU-EEPROM-configur.patch
+	patches.suse/PM-hibernate-remove-the-bogus-call-to-get_gendisk-in.patch
 	patches.suse/ACPI-video-use-ACPI-backlight-for-HP-635-Notebook.patch
 	patches.suse/ACPI-extlog-Check-for-RDMSR-failure.patch
 	patches.suse/scsi-smartpqi-identify-physical-devices-without-issuing-inquiry.patch
