spi: spi-cavium-thunderx: Add missing pci_release_regions() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53207,6 +53207,7 @@
 	patches.suse/IB-mlx4-Follow-mirror-sequence-of-device-add-during-.patch
 	patches.suse/IB-mlx5-Fix-steering-rule-of-drop-and-count.patch
 	patches.suse/efi-Don-t-attempt-to-map-RCI2-config-table-if-it-doe.patch
+	patches.suse/spi-spi-cavium-thunderx-Add-missing-pci_release_regi.patch
 	patches.suse/spi-fsl-don-t-map-irq-during-probe.patch
 	patches.suse/spi-nxp-fspi-Ensure-width-is-respected-in-spi-mem-op.patch
 	patches.suse/spi-fsl-use-platform_get_irq-instead-of-of_irq_to_resource.patch
