PM: ACPI: Output correct message on target power state (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54868,6 +54868,7 @@
 	patches.suse/dmaengine-dmatest-Fix-iteration-non-stop-logic.patch
 	patches.suse/nfs-Fix-potential-posix_acl-refcnt-leak-in-nfs3_set_.patch
 	patches.suse/NFSv4.1-fix-handling-of-backchannel-binding-in-BIND_.patch
+	patches.suse/PM-ACPI-Output-correct-message-on-target-power-state.patch
 	patches.suse/iommu-amd-fix-legacy-interrupt-remapping-for-x2apic-enabled-system
 	patches.suse/btrfs-fix-partial-loss-of-prealloc-extent-past-i_siz.patch
 	patches.suse/0021-virtio-blk-handle-block_device_operations-callbacks-.patch
