spi: spidev: fix a potential use-after-free in spidev_release() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55404,6 +55404,7 @@
 	patches.suse/crypto-algif_skcipher-Cap-recv-SG-list-at-ctx-used.patch
 	patches.suse/crypto-algboss-don-t-wait-during-notifier-callback.patch
 	patches.suse/spi-spidev-fix-a-race-between-spidev_release-and-spi.patch
+	patches.suse/spi-spidev-fix-a-potential-use-after-free-in-spidev_.patch
 	patches.suse/btrfs-fix-a-block-group-ref-counter-leak-after-failu.patch
 	patches.suse/btrfs-fix-race-between-block-group-removal-and-creation.patch
 	patches.suse/btrfs-fix-data-block-group-relocation-failure-due-to.patch
