--- a/series.conf
+++ b/series.conf
@@ -55047,6 +55047,7 @@
 	patches.suse/devinet-fix-memleak-in-inetdev_init.patch
 	patches.suse/l2tp-do-not-use-inet_hash-inet_unhash.patch
 	patches.suse/l2tp-add-sk_family-checks-to-l2tp_validate_socket.patch
+	patches.suse/regmap-debugfs-check-count-when-read-regmap-file.patch
 	patches.suse/spi-bcm-qspi-when-tx-rx-buffer-is-NULL-set-to-0.patch
 	patches.suse/spi-spi-mem-Fix-Dual-Quad-modes-on-Octal-capable-dev.patch
 	patches.suse/spi-pxa2xx-Apply-CS-clk-quirk-to-BXT.patch
