--- a/series.conf
+++ b/series.conf
@@ -56714,6 +56714,7 @@
 	patches.suse/ftrace-fix-recursion-check-for-nmi-test.patch
 	patches.suse/ftrace-handle-tracing-when-switching-between-context.patch
 	patches.suse/ring-buffer-fix-recursion-protection-transitions-between-interrupt-context.patch
+	patches.suse/mac80211-fix-use-of-skb-payload-instead-of-header.patch
 	patches.suse/mac80211-always-wind-down-STA-state.patch
 	patches.suse/cfg80211-regulatory-Fix-inconsistent-format-argument.patch
 	patches.suse/powerpc-vnic-Extend-failover-pending-window.patch
