regulator: max8907: Fix the usage of uninitialized variable in max8907_regulator_probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52647,6 +52647,7 @@
 	patches.suse/sctp-cache-netns-in-sctp_ep_common.patch
 	patches.suse/macvlan-schedule-bc_work-even-if-error.patch
 	patches.suse/slip-Fix-use-after-free-Read-in-slip_open.patch
+	patches.suse/regulator-max8907-Fix-the-usage-of-uninitialized-var.patch
 	patches.suse/regulator-ab8500-Remove-AB8505-USB-regulator.patch
 	patches.suse/regulator-ab8500-Remove-SYSCLKREQ-from-enum-ab8505_r.patch
 	patches.suse/spi-atmel-fix-handling-of-cs_change-set-on-non-last-.patch
