--- a/series.conf
+++ b/series.conf
@@ -54418,6 +54418,7 @@
 	patches.suse/Crypto-chelsio-Fixes-a-deadlock-between-rtnl_lock-an.patch
 	patches.suse/net-ena-Make-some-functions-static.patch
 	patches.suse/net-dsa-bcm_sf2-Fix-overflow-checks.patch
+	patches.suse/mac80211-fix-authentication-with-iwlwifi-mvm.patch
 	patches.suse/ipv4-fix-a-RCU-list-lock-in-fib_triestat_seq_show.patch
 	patches.suse/sctp-fix-refcount-bug-in-sctp_wfree.patch
 	patches.suse/sctp-fix-possibly-using-a-bad-saddr-with-a-given-dst.patch
