PCI: Don't disable decoding when mmio_always_on is set (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55107,6 +55107,7 @@
 	patches.suse/btrfs-fix-space_info-bytes_may_use-underflow-during-.patch
 	patches.suse/clocksource-dw_apb_timer-Make-CPU-affiliation-being-.patch
 	patches.suse/clocksource-dw_apb_timer_of-Fix-missing-clockevent-t.patch
+	patches.suse/PCI-Don-t-disable-decoding-when-mmio_always_on-is-se.patch
 	patches.suse/kgdb-Fix-spurious-true-from-in_dbg_master.patch
 	patches.suse/kvm-nvmx-skip-ibpb-when-switching-between-vmcs01-and-vmcs02.patch
 	patches.suse/kvm-x86-only-do-l1tf-workaround-on-affected-processors
