--- a/series.conf
+++ b/series.conf
@@ -52737,6 +52737,7 @@
 	patches.suse/pinctrl-devicetree-Avoid-taking-direct-reference-to-.patch
 	patches.suse/pinctl-ti-iodelay-fix-error-checking-on-pinctrl_coun.patch
 	patches.suse/pinctrl-sh-pfc-sh7734-Fix-duplicate-TCLK1_B.patch
+	patches.suse/pinctrl-amd-fix-__iomem-annotation-in-amd_gpio_irq_h.patch
 	patches.suse/pinctrl-samsung-Fix-device-node-refcount-leaks-in-S3.patch
 	patches.suse/0035-pinctrl-samsung-Fix-device-node-refcount-leaks-in-S3.patch
 	patches.suse/pinctrl-samsung-Fix-device-node-refcount-leaks-in-in.patch
