--- a/series.conf
+++ b/series.conf
@@ -54133,6 +54133,7 @@
 	patches.suse/0001-usb-core-port-do-error-out-if-usb_autopm_get_interfa.patch
 	patches.suse/vt-selection-push-console-lock-down.patch
 	patches.suse/vt-selection-push-sel_lock-up.patch
+	patches.suse/tty-serial-mvebu-uart-fix-a-wrong-return.patch
 	patches.suse/tty-serial-fsl_lpuart-free-IDs-allocated-by-IDA.patch
 	patches.suse/altera-stapl-altera_get_note-prevent-write-beyond-en.patch
 	patches.suse/firmware-imx-scu-ensure-sequential-tx.patch
