radeon: insert 10ms sleep in dce5_crtc_load_lut (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53875,6 +53875,7 @@
 	patches.suse/KVM-s390-do-not-clobber-registers-during-guest-reset.patch
 	patches.suse/clk-qcom-rcg2-Don-t-crash-if-our-parent-can-t-be-fou.patch
 	patches.suse/drm-amd-display-Retrain-dongles-when-SINK_COUNT-beco.patch
+	patches.suse/radeon-insert-10ms-sleep-in-dce5_crtc_load_lut.patch
 	patches.suse/0001-drm-amd-dm-mst-Ignore-payload-update-failures.patch
 	patches.suse/NFS-Revalidate-the-file-size-on-a-fatal-write-error.patch
 	patches.suse/NFS-Revalidate-the-file-mapping-on-all-fatal-writeba.patch
