--- a/series.conf
+++ b/series.conf
@@ -55529,6 +55529,7 @@
 	patches.suse/IB-hfi1-Do-not-destroy-hfi1_wq-when-the-device-is-sh.patch
 	patches.suse/IB-hfi1-Do-not-destroy-link_wq-when-the-device-is-sh.patch
 	patches.suse/llc-make-sure-applications-use-ARPHRD_ETHER.patch
+	patches.suse/mac80211-allow-rx-of-mesh-eapol-frames-with-default-.patch
 	patches.suse/tcp-md5-add-missing-memory-barriers-in-tcp_md5_do_ad.patch
 	patches.suse/genetlink-remove-genl_bind.patch
 	patches.suse/tcp-md5-refine-tcp_md5_do_add-tcp_md5_hash_key-barri.patch
