--- a/series.conf
+++ b/series.conf
@@ -56168,6 +56168,7 @@
 	patches.suse/net-systemport-Fix-memleak-in-bcm_sysport_probe.patch
 	patches.suse/sctp-not-disable-bh-in-the-whole-sctp_get_port_local.patch
 	patches.suse/netlabel-fix-problems-with-mapping-removal.patch
+	patches.suse/NFC-st95hf-Fix-memleak-in-st95hf_in_send_cmd.patch
 	patches.suse/batman-adv-Avoid-uninitialized-chaddr-when-handling-.patch
 	patches.suse/batman-adv-bla-use-netif_rx_ni-when-not-in-interrupt.patch
 	patches.suse/gtp-add-GTPA_LINK-info-to-msg-sent-to-userspace.patch
