--- a/series.conf
+++ b/series.conf
@@ -54026,6 +54026,7 @@
 	patches.suse/0001-usb-gadget-composite-Fix-bMaxPower-for-SuperSpeedPlu.patch
 	patches.suse/0001-usb-dwc2-Fix-in-ISOC-request-length-checking.patch
 	patches.suse/0001-USB-misc-iowarrior-add-support-for-the-100-device.patch
+	patches.suse/serial-ar933x_uart-set-UART_CS_-RX-TX-_READY_ORIDE.patch
 	patches.suse/serdev-ttyport-restore-client-ops-on-deregistration.patch
 	patches.suse/tty-serial-atmel-manage-shutdown-in-case-of-RS485-or.patch
 	patches.suse/vt-vt_ioctl-fix-race-in-VT_RESIZEX.patch
