--- a/series.conf
+++ b/series.conf
@@ -54608,6 +54608,7 @@
 	patches.suse/s390-cpuinfo-fix-wrong-output-when-cpu0-is-offline
 	patches.suse/s390-diag-fix-display-of-diagnose-call-statistics
 	patches.suse/rtc-ds1374-fix-possible-race-condition.patch
+	patches.suse/rtc-88pm860x-fix-possible-race-condition.patch
 	patches.suse/svcrdma-Fix-double-svc_rdma_send_ctxt_put-in-an-erro.patch
 	patches.suse/SUNRPC-Fix-a-potential-buffer-overflow-in-svc_print_.patch
 	patches.suse/svcrdma-Fix-leak-of-transport-addresses.patch
