--- a/series.conf
+++ b/series.conf
@@ -55056,6 +55056,7 @@
 	patches.suse/spi-dw-Return-any-value-retrieved-from-the-dma_trans.patch
 	patches.suse/spi-dw-Add-SPI-Tx-done-wait-method-to-DMA-based-tran.patch
 	patches.suse/spi-dw-Add-SPI-Rx-done-wait-method-to-DMA-based-tran.patch
+	patches.suse/spi-dw-Fix-Rx-only-DMA-transfers.patch
 	patches.suse/crypto-stm32-crc32-fix-ext4-chksum-BUG_ON.patch
 	patches.suse/objtool-clean-instruction-state-before-each-function-validation.patch
 	patches.suse/objtool-ignore-empty-alternatives.patch
