--- a/series.conf
+++ b/series.conf
@@ -52712,6 +52712,7 @@
 	patches.suse/media-cx88-Fix-some-error-handling-path-in-cx8800_in.patch
 	patches.suse/media-usbvision-Fix-races-among-open-close-and-disco.patch
 	patches.suse/media-ti-vpe-vpe-Fix-Motion-Vector-vpdma-stride.patch
+	patches.suse/media-ti-vpe-vpe-fix-a-v4l2-compliance-failure-causi.patch
 	patches.suse/media-cxusb-detect-cxusb_ctrl_msg-error-in-query.patch
 	patches.suse/0001-media-uvcvideo-Fix-error-path-in-control-parsing-fai.patch
 	patches.suse/media-usb-fix-memory-leak-in-af9005_identify_state.patch
