--- a/series.conf
+++ b/series.conf
@@ -52654,6 +52654,7 @@
 	patches.suse/spi-atmel-fix-handling-of-cs_change-set-on-non-last-.patch
 	patches.suse/spi-atmel-Fix-CS-high-support.patch
 	patches.suse/spi-img-spfi-fix-potential-double-release.patch
+	patches.suse/spi-pxa2xx-Add-missed-security-checks.patch
 	patches.suse/ipmi-dont-allow-device-module-unload-when-in-use.patch
 	patches.suse/ipmi-Fix-memory-leak-in-__ipmi_bmc_register.patch
 	patches.suse/msft-hv-1964-x86-hyperv-Allow-guests-to-enable-InvariantTSC.patch
