--- a/series.conf
+++ b/series.conf
@@ -56224,6 +56224,7 @@
 	patches.suse/drm-tve200-Stabilize-enable-disable.patch
 	patches.suse/mmc-sdhci-msm-Add-retries-when-all-tuning-phases-are.patch
 	patches.suse/regulator-push-allocation-in-set_consumer_device_sup.patch
+	patches.suse/spi-spi-loopback-test-Fix-out-of-bounds-read.patch
 	patches.suse/i2c-algo-pca-Reapply-i2c-bus-settings-after-reset.patch
 	patches.suse/rbd-require-global-cap_sys_admin-for-mapping-and-unmapping.patch
 	patches.suse/btrfs-require-only-sector-size-alignment-for-parent-.patch
