--- a/series.conf
+++ b/series.conf
@@ -54073,6 +54073,7 @@
 	patches.suse/0001-amdgpu-gmc_v9-save-restore-sdpif-regs-during-S3.patch
 	patches.suse/0001-drm-i915-gvt-Separate-display-reset-from-ALL_ENGINES.patch
 	patches.suse/drm-i915-gvt-fix-orphan-vgpu-dmabuf_objs-lifetime
+	patches.suse/Revert-PM-devfreq-Modify-the-device-name-as-devfreq-.patch
 	patches.suse/acpi-watchdog-allow-disabling-wdat-at-boot.patch
 	patches.suse/ACPICA-Introduce-ACPI_ACCESS_BYTE_WIDTH-macro.patch
 	patches.suse/ACPI-watchdog-Fix-gas-access_width-usage.patch
