--- a/series.conf
+++ b/series.conf
@@ -52656,6 +52656,7 @@
 	patches.suse/spi-img-spfi-fix-potential-double-release.patch
 	patches.suse/spi-pxa2xx-Add-missed-security-checks.patch
 	patches.suse/spi-tegra20-slink-add-missed-clk_unprepare.patch
+	patches.suse/spi-st-ssc4-add-missed-pm_runtime_disable.patch
 	patches.suse/ipmi-dont-allow-device-module-unload-when-in-use.patch
 	patches.suse/ipmi-Fix-memory-leak-in-__ipmi_bmc_register.patch
 	patches.suse/msft-hv-1964-x86-hyperv-Allow-guests-to-enable-InvariantTSC.patch
