--- a/series.conf
+++ b/series.conf
@@ -52694,6 +52694,7 @@
 	patches.suse/ASoC-rt5677-Mark-reg-RT5677_PWR_ANLG2-as-volatile.patch
 	patches.suse/ALSA-hda-realtek-Enable-internal-speaker-of-ASUS-UX4.patch
 	patches.suse/ALSA-usb-audio-Fix-Focusrite-Scarlett-6i6-gen1-input.patch
+	patches.suse/media-am437x-vpfe-Setting-STD-to-current-value-is-no.patch
 	patches.suse/media-vivid-Set-vid_cap_streaming-and-vid_out_stream.patch
 	patches.suse/media-vim2m-Fix-abort-issue.patch
 	patches.suse/media-cec.h-CEC_OP_REC_FLAG_-values-were-swapped.patch
