serial: txx9: add missing platform_driver_unregister() on error in serial_txx9_init (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56745,6 +56745,7 @@
 	patches.suse/USB-serial-cyberjack-fix-write-URB-completion-race.patch
 	patches.suse/USB-serial-option-add-LE910Cx-compositions-0x1203-0x.patch
 	patches.suse/USB-serial-option-add-Telit-FN980-composition-0x1055.patch
+	patches.suse/serial-txx9-add-missing-platform_driver_unregister-o.patch
 	patches.suse/vt-Disable-KD_FONT_OP_COPY.patch
 	patches.suse/ext4-correctly-report-not-supported-for-usr-grp-jquo.patch
 	patches.suse/ext4-unlock-xattr_sem-properly-in-ext4_inline_data_t.patch
