net: usb: sr9800: fix uninitialized local variable (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52191,6 +52191,7 @@
 	patches.suse/net-avoid-potential-infinite-loop-in-tc_ctl_action.patch
 	patches.suse/sctp-change-sctp_prot-.no_autobind-with-true.patch
 	patches.suse/net-bcmgenet-Fix-RGMII_MODE_EN-value-for-GENET-v1-2-.patch
+	patches.suse/net-usb-sr9800-fix-uninitialized-local-variable.patch
 	patches.suse/net-stmmac-disable-enable-ptp_ref_clk-in-suspend-res.patch
 	patches.suse/ipv4-Return-ENETUNREACH-if-we-can-t-create-route-but.patch
 	patches.suse/net-phy-bcm7xxx-define-soft_reset-for-40nm-EPHY.patch
