--- a/series.conf
+++ b/series.conf
@@ -53652,6 +53652,7 @@
 	patches.suse/USB-serial-ir-usb-fix-IrLAP-framing.patch
 	patches.suse/ttyprintk-fix-a-potential-deadlock-in-interrupt-cont.patch
 	patches.suse/tty-synclinkmp-Adjust-indentation-in-several-functio.patch
+	patches.suse/tty-synclink_gt-Adjust-indentation-in-several-functi.patch
 	patches.suse/serial-8250_bcm2835aux-Fix-line-mismatch-on-driver-u.patch
 	patches.suse/staging-vt6656-correct-packet-types-for-CTS-protect-.patch
 	patches.suse/staging-vt6656-use-NULLFUCTION-stack-on-mac80211.patch
