power: supply: bq27xxx_battery: Silence deferred-probe error (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54635,6 +54635,7 @@
 	patches.suse/powerpc-xive-Use-XIVE_BAD_IRQ-instead-of-zero-to-cat.patch
 	patches.suse/powerpc-64-tm-Don-t-let-userspace-set-regs-trap-via-.patch
 	patches.suse/powerpc-vmlinux.lds-Explicitly-retain-.gnu.hash.patch
+	patches.suse/power-supply-bq27xxx_battery-Silence-deferred-probe-.patch
 	patches.suse/fanotify-fix-merging-marks-masks-with-FAN_ONDIR.patch
 	patches.suse/ACPI-video-Use-native-backlight-on-Acer-Aspire-5783z.patch
 	patches.suse/ipv6-don-t-auto-add-link-local-address-to-lag-ports.patch
