--- a/series.conf
+++ b/series.conf
@@ -55574,6 +55574,7 @@
 	patches.suse/ALSA-hda-realtek-Enable-Speaker-for-ASUS-UX563.patch
 	patches.suse/HID-magicmouse-do-not-set-up-autorepeat.patch
 	patches.suse/HID-apple-Disable-Fn-key-key-re-mapping-on-clone-key.patch
+	patches.suse/regmap-dev_get_regmap_match-fix-string-comparison.patch
 	patches.suse/regmap-debugfs-Don-t-sleep-while-atomic-for-fast_io-.patch
 	patches.suse/spi-spi-sun6i-sun6i_spi_transfer_one-fix-setting-of-.patch
 	patches.suse/fuse-fix-parameter-for-fs_ioc_-get-set-flags.patch
