--- a/series.conf
+++ b/series.conf
@@ -52729,6 +52729,7 @@
 	patches.suse/media-v4l2-core-fix-touch-support-in-v4l_g_fmt.patch
 	patches.suse/media-vivid-Fix-wrong-locking-that-causes-race-condi.patch
 	patches.suse/0001-media-exynos4-is-fix-wrong-mdev-and-v4l2-dev-order-i.patch
+	patches.suse/media-pvrusb2-Fix-oops-on-tear-down-when-radio-suppo.patch
 	patches.suse/0001-b2c2-flexcop-usb-add-sanity-checking.patch
 	patches.suse/media-flexcop-usb-ensure-EIO-is-returned-on-error-co.patch
 	patches.suse/media-v4l2-ioctl.c-zero-reserved-fields-for-S-TRY_FM.patch
