media: sti: bdisp: fix a possible sleep-in-atomic-context bug in bdisp_device_run() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53798,6 +53798,7 @@
 	patches.suse/media-af9005-uninitialized-variable-printked.patch
 	patches.suse/media-i2c-mt9v032-fix-enum-mbus-codes-and-frame-size.patch
 	patches.suse/media-v4l2-rect.h-fix-v4l2_rect_map_inside-top-left-.patch
+	patches.suse/media-sti-bdisp-fix-a-possible-sleep-in-atomic-conte.patch
 	patches.suse/media-iguanair-fix-endpoint-sanity-check.patch
 	patches.suse/media-uvcvideo-Avoid-cyclic-entity-chains-due-to-mal.patch
 	patches.suse/PCI-AER-Log-which-device-prevents-error-recovery.patch
