--- a/series.conf
+++ b/series.conf
@@ -55052,6 +55052,7 @@
 	patches.suse/spi-spi-mem-Fix-Dual-Quad-modes-on-Octal-capable-dev.patch
 	patches.suse/spi-pxa2xx-Apply-CS-clk-quirk-to-BXT.patch
 	patches.suse/spi-dw-Zero-DMA-Tx-and-Rx-configurations-on-stack.patch
+	patches.suse/spi-dw-Enable-interrupts-in-accordance-with-DMA-xfer.patch
 	patches.suse/spi-dw-Add-SPI-Tx-done-wait-method-to-DMA-based-tran.patch
 	patches.suse/spi-dw-Add-SPI-Rx-done-wait-method-to-DMA-based-tran.patch
 	patches.suse/crypto-stm32-crc32-fix-ext4-chksum-BUG_ON.patch
