staging: rtl8188eu: Add device id for MERCUSYS MW150US v2 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54229,6 +54229,7 @@
 	patches.suse/0001-USB-serial-option-add-ME910G1-ECM-composition-0x110b.patch
 	patches.suse/0001-USB-serial-pl2303-add-device-id-for-HP-LD381.patch
 	patches.suse/staging-speakup-fix-get_word-non-space-look-ahead.patch
+	patches.suse/staging-rtl8188eu-Add-device-id-for-MERCUSYS-MW150US.patch
 	patches.suse/iio-magnetometer-ak8974-Fix-negative-raw-values-in-s.patch
 	patches.suse/intel_th-Fix-user-visible-error-codes.patch
 	patches.suse/intel_th-pci-Add-Elkhart-Lake-CPU-support.patch
