--- a/series.conf
+++ b/series.conf
@@ -56767,6 +56767,7 @@
 	patches.suse/futex-Don-t-enable-IRQs-unconditionally-in-put_pi_st.patch
 	patches.suse/thunderbolt-Add-the-missed-ida_simple_remove-in-ring.patch
 	patches.suse/usb-cdc-acm-Add-DISABLE_ECHO-for-Renesas-USB-Downloa.patch
+	patches.suse/mei-protect-mei_cl_mtu-from-null-dereference.patch
 	patches.suse/s390-cpum_sf-c-fix-file-permission-for-cpum_sfb_size
 	patches.suse/Input-adxl34x-clean-up-a-data-type-in-adxl34x_probe.patch
 	patches.suse/Input-i8042-allow-insmod-to-succeed-on-devices-witho.patch
