--- a/series.conf
+++ b/series.conf
@@ -55311,6 +55311,7 @@
 	patches.suse/USB-serial-usb_wwan-do-not-resubmit-rx-urb-on-fatal-.patch
 	patches.suse/USB-serial-qcserial-add-DW5816e-QDL-support.patch
 	patches.suse/USB-serial-option-add-Telit-LE910C1-EUX-compositions.patch
+	patches.suse/serial-amba-pl011-Make-sure-we-initialize-the-port.l.patch
 	patches.suse/tty-n_gsm-Fix-SOF-skipping.patch
 	patches.suse/tty-n_gsm-Fix-waking-up-upper-tty-layer-when-room-av.patch
 	patches.suse/tty-n_gsm-Fix-bogus-i-in-gsm_data_kick.patch
