soc: imx: gpc: fix power up sequencing (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54602,6 +54602,7 @@
 	patches.suse/msft-hv-2035-PCI-hv-Move-hypercall-related-definitions-into-tlfs-.patch
 	patches.suse/msft-hv-2036-PCI-hv-Move-retarget-related-structures-into-tlfs-he.patch
 	patches.suse/msft-hv-2037-PCI-hv-Introduce-hv_msi_entry.patch
+	patches.suse/soc-imx-gpc-fix-power-up-sequencing.patch
 	patches.suse/s390-cpum_cf-add-new-extended-counters-for-ibm-z15
 	patches.suse/s390-cpuinfo-show-processor-physical-address
 	patches.suse/s390-cpuinfo-fix-wrong-output-when-cpu0-is-offline
