media: i2c: mt9v032: fix enum mbus codes and frame sizes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53796,6 +53796,7 @@
 	patches.suse/media-v4l2-device.h-Explicitly-compare-grp-id-mask-t.patch
 	patches.suse/media-digitv-don-t-continue-if-remote-control-state-.patch
 	patches.suse/media-af9005-uninitialized-variable-printked.patch
+	patches.suse/media-i2c-mt9v032-fix-enum-mbus-codes-and-frame-size.patch
 	patches.suse/media-v4l2-rect.h-fix-v4l2_rect_map_inside-top-left-.patch
 	patches.suse/media-iguanair-fix-endpoint-sanity-check.patch
 	patches.suse/media-uvcvideo-Avoid-cyclic-entity-chains-due-to-mal.patch
