--- a/series.conf
+++ b/series.conf
@@ -52706,6 +52706,7 @@
 	patches.suse/media-ov6650-Fix-stored-frame-format-not-in-sync-wit.patch
 	patches.suse/media-ov6650-Fix-stored-crop-rectangle-not-in-sync-w.patch
 	patches.suse/media-i2c-ov2659-fix-s_stream-return-value.patch
+	patches.suse/media-i2c-ov2659-Fix-missing-720p-register-config.patch
 	patches.suse/media-rc-prevent-memory-leak-in-cx23888_ir_probe.patch
 	patches.suse/media-usbvision-Fix-races-among-open-close-and-disco.patch
 	patches.suse/media-ti-vpe-vpe-Fix-Motion-Vector-vpdma-stride.patch
