staging: rtl8188eu: Add device code for TP-Link TL-WN727N v5.21 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53374,6 +53374,7 @@
 	patches.suse/nvme-Translate-more-status-codes-to-blk_status_t.patch
 	patches.suse/tty-always-relink-the-port.patch
 	patches.suse/staging-comedi-adv_pci1710-fix-AI-channels-16-31-for.patch
+	patches.suse/staging-rtl8188eu-Add-device-code-for-TP-Link-TL-WN7.patch
 	patches.suse/chardev-Avoid-potential-use-after-free-in-chrdev_ope.patch
 	patches.suse/0001-USB-core-fix-check-for-duplicate-endpoints.patch
 	patches.suse/usb-musb-dma-Correct-parameter-passed-to-IRQ-handler.patch
