--- a/series.conf
+++ b/series.conf
@@ -52668,6 +52668,7 @@
 	patches.suse/cpufreq-Register-drivers-only-after-CPU-devices-have.patch
 	patches.suse/PM-devfreq-Check-NULL-governor-in-available_governor.patch
 	patches.suse/PM-devfreq-Lock-devfreq-in-trans_stat_show.patch
+	patches.suse/PM-hibernate-memory_bm_find_bit-Tighten-node-optimis.patch
 	patches.suse/tools-power-cpupower-fix-initializer-override-in-hsw_ext_cstates.patch
 	patches.suse/ALSA-hda-Fix-pending-unsol-events-at-shutdown.patch
 	patches.suse/ALSA-usb-audio-sound-usb-usb-true-false-for-bool-ret.patch
