--- a/series.conf
+++ b/series.conf
@@ -52789,6 +52789,7 @@
 	patches.suse/ppdev-fix-PPGETTIME-PPSETTIME-ioctls.patch
 	patches.suse/parport-load-lowlevel-driver-if-ports-not-found.patch
 	patches.suse/intel_th-Fix-a-double-put_device-in-error-path.patch
+	patches.suse/staging-rtl8192u-fix-multiple-memory-leaks-on-error-.patch
 	patches.suse/qlge-Fix-irq-masking-in-INTx-mode.patch
 	patches.suse/qlge-Remove-irq_cnt.patch
 	patches.suse/qlge-Remove-page_chunk.last_flag.patch
