--- a/series.conf
+++ b/series.conf
@@ -54275,6 +54275,7 @@
 	patches.suse/i2c-st-fix-missing-struct-parameter-description.patch
 	patches.suse/mlxsw-spectrum_mr-Fix-list-iteration-in-error-path.patch
 	patches.suse/nl80211-fix-NL80211_ATTR_CHANNEL_WIDTH-attribute-typ.patch
+	patches.suse/mac80211-Check-port-authorization-in-the-ieee80211_t.patch
 	patches.suse/mac80211-set-IEEE80211_TX_CTRL_PORT_CTRL_PROTO-for-n.patch
 	patches.suse/bpf-Explicitly-memset-the-bpf_attr-structure.patch
 	patches.suse/bpf-Explicitly-memset-some-bpf-info-structures-decla.patch
