--- a/series.conf
+++ b/series.conf
@@ -56263,6 +56263,7 @@
 	patches.suse/i2c-i801-Fix-resume-bug.patch
 	patches.suse/Input-i8042-add-Entroware-Proteus-EL07R4-to-nomux-an.patch
 	patches.suse/Input-trackpoint-add-new-trackpoint-variant-IDs.patch
+	patches.suse/serial-8250_pci-Add-Realtek-816a-and-816b.patch
 	patches.suse/USB-UAS-fix-disconnect-by-unplugging-a-hub.patch
 	patches.suse/USB-quirks-Add-USB_QUIRK_IGNORE_REMOTE_WAKEUP-quirk-.patch
 	patches.suse/usblp-fix-race-between-disconnect-and-read.patch
