PCI/ASPM: Allow ASPM on links to PCIe-to-PCI/PCI-X Bridges (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55284,6 +55284,7 @@
 	patches.suse/dlm-remove-BUG-before-panic.patch
 	patches.suse/ima-Fix-ima-digest-hash-table-key-calculation.patch
 	patches.suse/ima-Directly-assign-the-ima_default_policy-pointer-t.patch
+	patches.suse/PCI-ASPM-Allow-ASPM-on-links-to-PCIe-to-PCI-PCI-X-Br.patch
 	patches.suse/PCI-Fix-pci_register_host_bridge-device_register-err.patch
 	patches.suse/PCI-Program-MPS-for-RCiEP-devices.patch
 	patches.suse/PCI-PTM-Inherit-Switch-Downstream-Port-PTM-settings-.patch
