--- a/series.conf
+++ b/series.conf
@@ -55053,6 +55053,7 @@
 	patches.suse/spi-pxa2xx-Apply-CS-clk-quirk-to-BXT.patch
 	patches.suse/spi-dw-Zero-DMA-Tx-and-Rx-configurations-on-stack.patch
 	patches.suse/spi-dw-Enable-interrupts-in-accordance-with-DMA-xfer.patch
+	patches.suse/spi-dw-Return-any-value-retrieved-from-the-dma_trans.patch
 	patches.suse/spi-dw-Add-SPI-Tx-done-wait-method-to-DMA-based-tran.patch
 	patches.suse/spi-dw-Add-SPI-Rx-done-wait-method-to-DMA-based-tran.patch
 	patches.suse/crypto-stm32-crc32-fix-ext4-chksum-BUG_ON.patch
