gpiolib: acpi: Add quirk to ignore EC wakeups on HP x2 10 CHT + AXP288 model (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54240,6 +54240,7 @@
 	patches.suse/gpiolib-acpi-Correct-comment-for-HP-x2-10-honor_wake.patch
 	patches.suse/gpiolib-acpi-Rework-honor_wakeup-option-into-an-igno.patch
 	patches.suse/gpiolib-acpi-Add-quirk-to-ignore-EC-wakeups-on-HP-x2.patch
+	patches.suse/gpiolib-acpi-Add-quirk-to-ignore-EC-wakeups-on-HP2.patch
 	patches.suse/net_sched-keep-alloc_hash-updated-after-hash-allocat.patch
 	patches.suse/hsr-use-rcu_read_lock-in-hsr_get_node_-list-status.patch
 	patches.suse/hsr-add-restart-routine-into-hsr_get_node_list.patch
