--- a/series.conf
+++ b/series.conf
@@ -56297,6 +56297,7 @@
 	patches.suse/ALSA-hda-realtek-Couldn-t-detect-Mic-if-booting-with.patch
 	patches.suse/ALSA-hda-realtek-Enable-front-panel-headset-LED-on-L.patch
 	patches.suse/ALSA-usb-audio-Add-delay-quirk-for-H570e-USB-headset.patch
+	patches.suse/Revert-ALSA-hda-Fix-silent-audio-output-and-corrupte.patch
 	patches.suse/Revert-ALSA-usb-audio-Disable-Lenovo-P620-Rear-line-.patch
 	patches.suse/drm-vc4-vc4_hdmi-fill-ASoC-card-owner.patch
 	patches.suse/drm-sun4i-sun8i-csc-Secondary-CSC-register-correctio.patch
