gpiolib: acpi: Rework honor_wakeup option into an ignore_wake option (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54238,6 +54238,7 @@
 	patches.suse/x86-mm-split-vmalloc_sync_all.patch
 	patches.suse/btrfs-fix-log-context-list-corruption-after-rename-w.patch
 	patches.suse/gpiolib-acpi-Correct-comment-for-HP-x2-10-honor_wake.patch
+	patches.suse/gpiolib-acpi-Rework-honor_wakeup-option-into-an-igno.patch
 	patches.suse/net_sched-keep-alloc_hash-updated-after-hash-allocat.patch
 	patches.suse/hsr-use-rcu_read_lock-in-hsr_get_node_-list-status.patch
 	patches.suse/hsr-add-restart-routine-into-hsr_get_node_list.patch
