--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1715,3 +1715,4 @@ ff17bbe0bb405ad8b36e55815d381841f9fdeebc # we don't use gcc 5.5 for this kernel
 e91d8d78237de8d7120c320b3645b7100848f24d # only removes code we don't enable
 a62520473f15750cd1432d36b377a06cd7cff8d2 # net: macb: no PTP support in the driver 
 611d779af7cad2b87487ff58e4931a90c20b113c # net: phy: lead to kABI breakage
+0aae11bcdefb4894b6100656ad24cbd85ff34b52 # PM/devfreq: not applicable, only indent fix
