spi: st-ssc4: Fix unbalanced pm_runtime_disable() in probe error path (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56985,6 +56985,7 @@
 	patches.suse/spi-tegra114-fix-reference-leak-in-tegra-spi-ops.patch
 	patches.suse/spi-bcm63xx-hsspi-fix-missing-clk_disable_unprepare-.patch
 	patches.suse/spi-pic32-Don-t-leak-DMA-channels-in-probe-error-pat.patch
+	patches.suse/spi-st-ssc4-Fix-unbalanced-pm_runtime_disable-in-pro.patch
 	patches.suse/spi-davinci-Fix-use-after-free-on-unbind.patch
 	patches.suse/memstick-fix-a-double-free-bug-in-memstick_check.patch
 	patches.suse/memstick-r592-Fix-error-return-in-r592_probe.patch
