Revert "serial: amba-pl011: Make sure we initialize the port.lock spinlock" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55864,6 +55864,7 @@
 	patches.suse/staging-rtl8192u-fix-a-dubious-looking-mask-before-a.patch
 	patches.suse/iio-dac-ad5592r-fix-unbalanced-mutex-unlocks-in-ad55.patch
 	patches.suse/Staging-rtl8188eu-rtw_mlme-Fix-uninitialized-variabl.patch
+	patches.suse/Revert-serial-amba-pl011-Make-sure-we-initialize-the.patch
 	patches.suse/vgacon-fix-out-of-bounds-write-to-the-scrollback-buf.patch
 	patches.suse/RDMA-rxe-Remove-unused-rxe_mem_map_pages.patch
 	patches.suse/RDMA-ipoib-Return-void-from-ipoib_ib_dev_stop.patch
