kABI workaround for HD-audio generic parser (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -58023,6 +58023,7 @@
 	patches.kabi/kABI-genirq-add-back-irq_create_mapping.patch
 	patches.kabi/b53_kabi.patch
 	patches.kabi/kABI-ath10k-move-a-new-structure-member-to-the-end.patch
+	patches.kabi/snd-hda-codec-generic-kabi-workaround.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
