staging: vt6656: set usb_set_intfdata on driver fail (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53381,6 +53381,7 @@
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-the-bass-speaker-on-L.patch
 	patches.suse/nvme-Translate-more-status-codes-to-blk_status_t.patch
 	patches.suse/tty-always-relink-the-port.patch
+	patches.suse/staging-vt6656-set-usb_set_intfdata-on-driver-fail.patch
 	patches.suse/staging-comedi-adv_pci1710-fix-AI-channels-16-31-for.patch
 	patches.suse/staging-rtl8188eu-Add-device-code-for-TP-Link-TL-WN7.patch
 	patches.suse/chardev-Avoid-potential-use-after-free-in-chrdev_ope.patch
