usb: dwc3: remove the call trace of USBx_GFLADJ (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52319,6 +52319,7 @@
 	patches.suse/usb-gadget-udc-atmel-Fix-interrupt-storm-in-FIFO-mod.patch
 	patches.suse/usb-gadget-composite-Fix-possible-double-free-memory.patch
 	patches.suse/usb-gadget-configfs-fix-concurrent-issue-between-com.patch
+	patches.suse/usb-dwc3-remove-the-call-trace-of-USBx_GFLADJ.patch
 	patches.suse/USB-ldusb-fix-ring-buffer-locking.patch
 	patches.suse/USB-ldusb-fix-control-message-timeout.patch
 	patches.suse/0001-usbip-Fix-free-of-unallocated-memory-in-vhci-tx.patch
