usb: gadget: udc: fix possible sleep-in-atomic-context bugs in gr_probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53653,6 +53653,7 @@
 	patches.suse/pinctrl-baytrail-Do-not-clear-IRQ-flags-on-direct-ir.patch
 	patches.suse/usb-dwc2-Fix-IN-FIFO-allocation.patch
 	patches.suse/usb-gadget-legacy-set-max_speed-to-super-speed.patch
+	patches.suse/usb-gadget-udc-fix-possible-sleep-in-atomic-context-.patch
 	patches.suse/usb-dwc3-turn-off-VBUS-when-leaving-host-mode.patch
 	patches.suse/usb-gadget-f_ncm-Use-atomic_t-to-track-in-flight-req.patch
 	patches.suse/usb-gadget-f_ecm-Use-atomic_t-to-track-in-flight-req.patch
