usb: gadget: fix wrong endpoint desc (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53178,6 +53178,7 @@
 	patches.suse/USB-adutux-fix-interface-sanity-check.patch
 	patches.suse/USB-atm-ueagle-atm-add-missing-endpoint-check.patch
 	patches.suse/usb-dwc3-ep0-Clear-started-flag-on-completion.patch
+	patches.suse/usb-gadget-fix-wrong-endpoint-desc.patch
 	patches.suse/xhci-Fix-memory-leak-in-xhci_add_in_port.patch
 	patches.suse/xhci-fix-USB3-device-initiated-resume-race-with-root.patch
 	patches.suse/usb-xhci-only-set-D3hot-for-pci-device.patch
