USB: Fix: Don't skip endpoint descriptors with maxpacket=0 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53390,6 +53390,7 @@
 	patches.suse/usb-chipidea-host-Disable-port-power-only-if-previou.patch
 	patches.suse/0001-USB-serial-option-add-Telit-ME910G1-0x110a-compositi.patch
 	patches.suse/0001-USB-serial-option-add-ZLP-support-for-0x1bc7-0x9010.patch
+	patches.suse/USB-Fix-Don-t-skip-endpoint-descriptors-with-maxpack.patch
 	patches.suse/usb-musb-fix-idling-for-suspend-after-disconnect-int.patch
 	patches.suse/0001-usb-musb-Disable-pullup-at-init.patch
 	patches.suse/HID-hidraw-uhid-Always-report-EPOLLOUT.patch
