wireless: Use linux/stddef.h instead of stddef.h (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55187,6 +55187,7 @@
 	patches.suse/b43-Fix-connection-problem-with-WPA3.patch
 	patches.suse/b43_legacy-Fix-connection-problem-with-WPA3.patch
 	patches.suse/airo-Fix-read-overflows-sending-packets.patch
+	patches.suse/wireless-Use-linux-stddef.h-instead-of-stddef.h.patch
 	patches.suse/Bluetooth-Add-SCO-fallback-for-invalid-LMP-parameter.patch
 	patches.suse/Bluetooth-Consolidate-encryption-handling-in-hci_enc.patch
 	patches.suse/vxlan-Avoid-infinite-loop-when-suppressing-NS-messag.patch
