usblp: poison URBs upon disconnect (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55319,6 +55319,7 @@
 	patches.suse/msft-hv-2076-PCI-hv-Fix-the-PCI-HyperV-probe-failure-path-to-rele.patch
 	patches.suse/msft-hv-2077-PCI-hv-Retry-PCI-bus-D0-entry-on-invalid-device-stat.patch
 	patches.suse/PCI-rcar-Fix-incorrect-programming-of-OB-windows.patch
+	patches.suse/usblp-poison-URBs-upon-disconnect.patch
 	patches.suse/USB-EHCI-ehci-mv-fix-error-handling-in-mv_ehci_probe.patch
 	patches.suse/USB-EHCI-ehci-mv-fix-less-than-zero-comparison-of-an.patch
 	patches.suse/USB-host-ehci-mxc-Add-error-handling-in-ehci_mxc_drv.patch
