usb: usbfs: Suppress problematic bind and unbind uevents (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52770,6 +52770,7 @@
 	patches.suse/RDMA-bnxt_re-Fix-stat-push-into-dma-buffer-on-gen-p5-devices.patch
 	patches.suse/RDMA-bnxt_re-Fix-missing-le16_to_cpu.patch
 	patches.suse/RDMA-efa-Support-remote-read-access-in-MR-registrati.patch
+	patches.suse/usb-usbfs-Suppress-problematic-bind-and-unbind-ueven.patch
 	patches.suse/usb-gadget-pch_udc-fix-use-after-free.patch
 	patches.suse/usb-Allow-USB-device-to-be-warm-reset-in-suspended-s.patch
 	patches.suse/0001-appledisplay-fix-error-handling-in-the-scheduled-wor.patch
