watchdog: da9062: No need to ping manually before setting timeout (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55201,6 +55201,7 @@
 	patches.suse/media-cec-silence-shift-wrapping-warning-in-__cec_s_.patch
 	patches.suse/mfd-wm8994-Fix-driver-operation-if-loaded-as-modules.patch
 	patches.suse/backlight-lp855x-Ensure-regulators-are-disabled-on-p.patch
+	patches.suse/watchdog-da9062-No-need-to-ping-manually-before-sett.patch
 	patches.suse/ALSA-usb-audio-Improve-frames-size-computation.patch
 	patches.suse/ALSA-usb-audio-Fix-racy-list-management-in-output-qu.patch
 	patches.suse/ALSA-hda-realtek-Introduce-polarity-for-micmute-LED-.patch
