powerpc/pci: Fix broken INTx configuration via OF (bsc#1172145 ltc#184630).

--- a/series.conf
+++ b/series.conf
@@ -24536,6 +24536,7 @@
 	patches.suse/0161-bcache-return-attach-error-when-no-cache-set-exist.patch
 	patches.suse/0162-bcache-fix-for-data-collapse-after-re-attaching-an-a.patch
 	patches.suse/block-bfq-add-requeue-request-hook.patch
+	patches.suse/powerpc-pci-Fix-broken-INTx-configuration-via-OF.patch
 	patches.suse/crypto-sha512-mb-initialize-pending-lengths-correctl
 	patches.suse/crypto-talitos-fix-Kernel-Oops-on-hashing-an-empty-f
 	patches.suse/crypto-caam-fix-endless-loop-when-DECO-acquire-fails
