powerpc/pci: Use of_irq_parse_and_map_pci() helper (bsc#1172145 ltc#184630).

--- a/series.conf
+++ b/series.conf
@@ -23913,6 +23913,7 @@
 	patches.suse/PCI-DPC-Squash-dpc_rp_pio_get_info-into-dpc_process_.patch
 	patches.suse/PCI-DPC-Add-and-use-DPC-Status-register-field-defini.patch
 	patches.suse/0006-PCI-Move-OF-related-PCI-functions-into-PCI-core.patch
+	patches.suse/powerpc-pci-Use-of_irq_parse_and_map_pci-helper.patch
 	patches.suse/PCI-Make-PCI_SCAN_ALL_PCIE_DEVS-work-for-Root-as-wel.patch
 	patches.suse/0001-PCI-Add-pci_enable_atomic_ops_to_root.patch
 	patches.suse/0001-PCI-hotplug-Drop-checking-of-PCI_BRIDGE_CONTROL-in-_.patch
