powerpc: Convert to using %pOF instead of full_name (bsc#1172145 ltc#184630).

--- a/series.conf
+++ b/series.conf
@@ -9502,6 +9502,7 @@
 	patches.suse/powerpc-Remove-redundant-FP-Altivec-giveup-code.patch
 	patches.suse/powerpc-perf-fix-usage-of-nest_imc_refc.patch
 	patches.suse/powerpc-mm-Rename-find_linux_pte_or_hugepte.patch
+	patches.suse/powerpc-Convert-to-using-pOF-instead-of-full_name.patch
 	patches.suse/powerpc-pseries-remove-dlpar_attach_node-dependency-.patch
 	patches.suse/powerpc-mm-Move-pgdir-setting-into-a-helper.patch
 	patches.suse/powerpc-mm-Optimize-detection-of-thread-local-mm-s.patch
