s390/dasd: fix hanging device offline processing (bsc#1144912).

--- a/series.conf
+++ b/series.conf
@@ -56881,6 +56881,7 @@
 	patches.suse/power-supply-bq24190_charger-fix-reference-leak.patch
 	patches.suse/rtc-hym8563-enable-wakeup-when-applicable.patch
 	patches.suse/kvm-x86-reinstate-vendor-agnostic-check-on-spec_ctrl-cpuid-bits.patch
+	patches.suse/s390-dasd-fix-hanging-device-offline-processing
 	patches.suse/powerpc-smp-Add-__init-to-init_big_cores.patch
 
 	# davem/net
