md/bitmap: fix memory leak of temporary bitmap (bsc#1163727).

--- a/series.conf
+++ b/series.conf
@@ -56231,6 +56231,7 @@
 	patches.suse/fs-Don-t-invalidate-page-buffers-in-block_write_full.patch
 	patches.suse/0004-md-bitmap-md_bitmap_read_sb-uses-wrong-bitmap-blocks.patch
 	patches.suse/0005-md-bitmap-md_bitmap_get_counter-returns-wrong-blocks.patch
+	patches.suse/0006-md-bitmap-fix-memory-leak-of-temporary-bitmap.patch
 	patches.suse/md-raid5-fix-oops-during-stripe-resizing.patch
 	patches.suse/xen-gntdev.c-Mark-pages-as-dirty.patch
 	patches.suse/x86-xen-disable-Firmware-First-mode-for-correctable-.patch
